# simple-speed-test

./: .replit  app.py  pyproject.toml
templates/: error.html  speedtest.html
